-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.4
-
4f1c1ba23 (dev), 7ca794de7 (6.7), e0bad8cec (tqtc/lts-6.5)
TreeView doesn't seem to react to adding columns to it's model.
Steps to reproduce the problem:
- run the attached example
- click anywhere to append a column to the model
Note: The example consists of TreeView (above) and TableView (below) and the same model is used. Only TableView reacts.