Fix adding columns to TreeView

Handle the column related signals in the qqmltreemodeltotablemodel.

Fixes: QTBUG-94100
Change-Id: I4a1d4ee4e2f927e7798211f314a1356721748c92
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
(cherry picked from commit 4f1c1ba238e382697cee636bb544e92532d9ba51)
(cherry picked from commit 7ca794de76e91c2c05d96b1b3988350cf415207f)